# tollbooth-simulator

./: .env.example  .gitignore  README.md  compose.yaml  env  main.py  pyproject.toml  styles.css
src/tollbooth_simulator/: consumer.py
src/tollbooth_simulator/api/: passages.py
src/tollbooth_simulator/db/: database.py
src/tollbooth_simulator/storage/: passage_store.py
tests/: test_consumer.py
tests/api/: test_passages.py
tests/db/: test_database.py
tests/storage/: test_passage_store.py
web/: app.js  index.html
